@@ -46,8 +46,11 @@ vpfopen(char *filename, char *type)
 	FILE	*returncode;
 	int	i;
 
-	if ((returncode = myfopen(filename, type)) == NULL && filename[0] != '/' &&
-	    strcmp(type, "r") == 0) {
+	if ((returncode = myfopen(filename, type)) == NULL 
+		&& filename[0] != '/' 
+		/* && strcmp(type, "r") == 0 */ /* HBB: this breaks if type=="rb" */
+		&& type[0] == 'r'
+		) {
 		vpinit(NULL);
 		for (i = 1; i < vpndirs; i++) {
 			(void) sprintf(buf, "%s/%s", vpdirs[i], filename);
